2001-09-28  Alex Graveley  <alex@ximian.com>

	* build/libsoup.dsp (SOURCE): Add soup-socket-win.c.

	* tests/simple-test.c (main): Take HTTP method and body parameters
	to use in the request.

	* src/libsoup/soup-socket.h: Make soup_gethostbyname and
	soup_gethostbyaddr public.

	* src/libsoup/soup-socket-unix.c: Added, split of networking code
	into unix-specific sections.

	* src/libsoup/soup-socket-win.c: Added, Windows networking code.

	* src/libsoup/soup-socket.c: Holds common socket functions.

2001-09-27  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket.c: Remove Glib workarounds for Windows 
	socket io.

2001-09-27  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket.c (soup_address_new): #ifdef protect the
	ptrace attach/detach code until I have a chance to look at why it
	fails on some platforms.

2001-09-27  Alex Graveley  <alex@ximian.com>

	* build/libsoup.def: Update for new exports.

2001-09-27  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-dav-server.h: Fix constness for get_dav_prop
	and get_custom_prop.

2001-09-19  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-message.c (soup_message_send): Fix this to not
	return immediately after parsing the first line of the response.
	(Needed an update for the 09-07 api changes.)

2001-09-17  Vladimir Vukicevic  <vladimir@ximian.com>

	* src/libsoup/soup-socket.c, src/libsoup/soup-socket.h:
	Added soup_address_copy().  Changed soup_address_new to check
	whether the ports are the same before using a cached
	address.

2001-09-14  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-serializer.c
	(soup_serializer_get_namespace_prefix): Return const string.

	* Makefile.am (EXTRA_DIST): Install soup.m4.

	* src/libwsdl/wsdl-soap-marshal.c:
	* src/libwsdl/wsdl-typecodes.c:
	* src/soup-wsdl/wsdl-parse.c: Formatting.

2001-09-13  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-serializer.c
	(soup_serializer_get_namespace_prefix): Impl.
